--- a/3d-portfolio/package.json
+++ b/3d-portfolio/package.json
@@ -13,13 +13,14 @@
     "@emailjs/browser": "^4.4.1",
     "@react-three/drei": "^9.119.0",
     "@react-three/fiber": "^8.17.10",
-    "framer-motion": "^11.12.0",
+    "framer-motion": "^11.13.1",
     "maath": "^0.10.8",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-router-dom": "^7.0.1",
     "react-tilt": "^1.0.2",
-    "react-vertical-timeline-component": "^3.6.0"
+    "react-vertical-timeline-component": "^3.6.0",
+    "three": "^0.171.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.15.0",
